# fastapi-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  nixpacks.toml  package-lock.json  pyproject.toml  requirements.txt
scrapers/: __init__.py  amazon_se.py  exceptions.py  imdb.py  openlibrary.py  search.py
static/css/: app.css  base.css
tailwindcss/: package-lock.json  package.json
tailwindcss/styles/: app.css
templates/: base.html  imdb-details.html  result.html  search.html
